# example_projects

./: .gdbinit  Cargo.toml  README.md  build.rs  link.x  pwm.txt  system_control.txt  timer2.txt
.cargo/: config
demo_project/: .gitignore  Cargo.toml  README.md  generate_peripheral_struct.py  gpio.txt  timer.txt  uart.txt
demo_project/src/: main.rs
fertos_project/: Cargo.toml  build.rs  link.x  openocd.cfg
fertos_project/.cargo/: config
fertos_project/src/: cmd.rs  main.rs  uart_server.rs
queue_test/: .gdbinit  Cargo.toml
queue_test/src/: main.rs
src/: cortex_m4_init.rs  gpio.rs  main.rs  pwm.rs  system_control.rs  tm4c1294_peripherals.rs  uart.rs
tm4c123_hal_timers/: .gdbinit  Cargo.toml  openocd.cfg  test.sh
tm4c123_hal_timers/src/: main.rs
tm4c129_hal_timers/: .gdbinit  Cargo.toml  test.sh
tm4c129_hal_timers/.cargo/: config
tm4c129_hal_timers/src/: main.rs
tm4c_hal_test/: .gdbinit  .gitignore  Cargo.toml  openocd.cfg
tm4c_hal_test/.cargo/: config
tm4c_hal_test/src/: main.rs
