[package]
name = "awranovsky_test"
version = "0.1.0"
authors = ["Alexander Wranovsky <alex@wranovsky.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0.25"

[dependencies]
cortex-m                = "0.5.8"
cortex-m-rt             = "0.6.5"
cortex-m-semihosting    = "0.3.2"
panic-halt              = "0.2.0"
atomic_queue            = { git = "https://github.com/thejpster/atomic-queue-rs" }

[dependencies.tm4c129x-hal]
version = "0.8.2"
features = ["rt"]
