[package]
authors = [
    "Dakota Kitzman <dakota.kitzman@gmail.com>",
]
edition = "2018"
readme = "README.md"
name = "fertos-project"
version = "0.1.0"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
cortex-m-semihosting = "0.3.2"
panic-halt = "0.2.0"
alloc-cortex-m = "0.3.5"

[dependencies.fe_rtos]
path = "../../FeRTOS"

[dependencies.fe_osi]
path = "../../fe_osi"

[dependencies.tm4c129x-hal]
version = "0.9.0"
features = ["rt"]

# this lets you use `cargo fix`!
[[bin]]
name = "fertos-project"
test = false
bench = false
