[package]
authors = [
    "Dakota Kitzman <dakota.kitzman@gmail.com>",
]
edition = "2018"
readme = "README.md"
name = "fertos-project"
version = "0.1.0"

[dependencies]
cortex-m = "0.6"

[dependencies.fe_rtos]
path = "../../FeRTOS"

[dependencies.fe_osi]
path = "../../fe_osi"

[dependencies.rust_tm4c]
path = "../../rust_tm4c"
features = ["tm4c123"]

[dependencies.tm4c123x-hal]
version = "0.9.0"

# this lets you use `cargo fix`!
[[bin]]
name = "fertos-project"
test = false
bench = false
