[package]
name = "tm4c129_hal_timers"
version = "0.1.0"
authors = ["Alexander Wranovsky <alex@wranovsky.org>"]
edition = "2018"

[dependencies]
cortex-m                = "0.6.1"
cortex-m-rt             = "0.6.10"
cortex-m-semihosting    = "0.3.5"
panic-halt              = "0.2.0"

[dependencies.tm4c129x-hal]
features = ["rt"]
path = "../../../tm4c-hal/tm4c129x-hal"
