[package]
name = "tm4c129_hal_timers"
version = "0.1.0"
authors = ["Alexander Wranovsky <alex@wranovsky.org>"]
edition = "2018"

[dependencies]
cortex-m                = "0.6.1"
cortex-m-rt             = "0.6.10"
cortex-m-semihosting    = "0.3.5"
tm4c129x                = "0.9.0"
panic-halt              = "0.2.0"
embedded-hal            = "0.2.3"
atomic_queue            = { git = "https://github.com/thejpster/atomic-queue-rs" }

[dependencies.tm4c129x-hal]
features = ["rt"]
git = "https://github.com/badrobotics/tm4c-hal"
branch = "tm4c129x_timers"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]
