[package]
name = "tm4c-hal-test"
version = "0.1.0"
authors = ["Alex Wranovsky <alex@wranovsky.org>"]
description = "This crate is simply me testing out thejpster's tm4c-hal."
keywords = ["arm", "cortex-m"]
categories = ["embedded", "no-std"]
license = "MIT"
repository = "https://github.com/japaric/cortex-m-quickstart"

[dependencies]
cortex-m                = "0.6.1"
cortex-m-rt             = "0.6.10"
cortex-m-semihosting    = "0.3.5"
panic-halt              = "0.2.0"

[dependencies.tm4c129x-hal]
features = ["rt"]
path = "../../../tm4c-hal/tm4c129x-hal"
